--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jul  1 21:52:59 2004  Tim Janik  <timj@gtk.org>
+
+	* library/skins/*.skin: added pattern editor skin setup.
+	added more shading to the lighter skins.
+
 Thu Jul  1 20:56:23 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstrecords.idl: added RowShading choice enumeration.
