--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ Overview of Changes in BEAST/BSE 0.6.2:
 * Added CPU usage information view
 * Enabled tooltips on menu items
 * Rewrote logging, messaging and error reporting system
+* Fixed attack time handling in SimpleADSR
 * Added support for 1/32, 1/64 and 1/128 notes and quantization steps
 * Added skin and row highlighting support to the pattern editor
 * Adjusted skins (pacified some of the more disturbing ones)
