--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-02  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2004-06-29  Gareth Owen  <gowen72@yahoo.com>
 
 	* en_GB.po: Updated British English translations from
