--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sun Jul  4 02:43:43 2004  Tim Janik  <timj@gtk.org>
+
+	* acbeast.m4: don't pass -Wmissing-prototypes to g++-3.4.
+
+	* beast-gtk/gxk/gxkutils.c (widget_print_ancestry): added inactive debugging code.
+
 Fri Jul  2 02:24:13 2004  Tim Janik  <timj@gtk.org>
 
 	* configure.in: added $LIBZ to $GXK_LIBS, since sooner or later we need
