--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 FIXMES:
+- rename "WAVE File" to "Export AUDIO"
+- when loading/merging bse files, make sure all orphan parts are in a new muted track and delete part-item-view
 - implement ordinary save functionality
 - pattern editor: pressing G+1 on G+1, should delete old note (and its length) and insert new note (and its length)
 - pattern editor: add note LENGTH editing!
