--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,10 @@
+Mon Jul  5 08:55:53 2004  Tim Janik  <timj@gtk.org>
+
+	* bsesong.[hcp]: added support for song busses.
+
+	* bsesongbus.[hc]: new source, intended to be used for
+	mixing song tracks.
+
 Tue Jun 29 01:51:29 2004  Tim Janik  <timj@gtk.org>
 
 	* bsepart.c: flag fixes.
