--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jul  7 13:49:30 2004  Tim Janik  <timj@gtk.org>
+
+	* glib-extra.[hc]: added g_predicate_idle_add() and *full() variant, to
+	install an idle handler with condition.
+
 Sun Jul  4 08:09:48 2004  Tim Janik  <timj@gtk.org>
 
 	* sfidl-parser.h: with gcc-3.4, finding memebers of a dependant base
