--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jul  7 19:29:24 2004  Tim Janik  <timj@gtk.org>
+
+	* docs/faq.texi: added an entry on distortion caused by clipping
+	unattenuated signals.
+
 Mon Jul  5 08:53:07 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstsupershell.c: added song-bus view to song-shell in
