--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jul  7 19:50:20 2004  Tim Janik  <timj@gtk.org>
+
+	* configure.in: released beast 0.6.2, binary 0, interface 0.
+
 Wed Jul  7 19:29:24 2004  Tim Janik  <timj@gtk.org>
 
 	* docs/faq.texi: added an entry on distortion caused by clipping
