--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jul  8 00:57:16 2004  Tim Janik  <timj@gtk.org>
+
+	* docs/site-oldnews.texi: 
+	* docs/site-news.texi: news rotation, announced 0.6.2.
+
 Wed Jul  7 19:50:20 2004  Tim Janik  <timj@gtk.org>
 
 	* configure.in: released beast 0.6.2, binary 0, interface 0.
