--- a/docs/site-oldnews.texi
+++ b/docs/site-oldnews.texi
@@ -11,6 +11,53 @@
 @unnumbered What Was New? (Ancient News)
 
 
+@newsTitle{Thursday 01 Jul 2004, New Release Candidate}
+
+A new release candidate
+@uref{http://beast.gtk.org/beast-ftp/v0.6/testing/beast-0.6.2-rc2.tar.gz,, beast-0.6.2-rc2.tar.gz}
+is up in the download area. The mailing list is currently non-functional so please send
+problems and success stories about the candidate to
+@uref{mailto://timj@@beast.gtk.org,,Tim Janik}.
+
+
+@newsTitle{Sunday 07 Mar 2004, The low latency BEAST Release}
+
+BEAST/BSE version 0.6.1 is available from the
+@uref{beast-doc://download,,download section},
+here is the @uref{http://www.gnomedesktop.org/article.php?sid=1708,,FootNotes announcement}.
+
+Tarball:
+@uref{http://beast.gtk.org/beast-ftp/v0.6/beast-0.6.1.tar.gz,, beast-0.6.1.tar.gz}
+and patch:
+@uref{http://beast.gtk.org/beast-ftp/v0.6/patch-beast-0.6.0-0.6.1.bz2,, patch-beast-0.6.0-0.6.1.bz2}.
+
+Apart from important bug fixes, this release comes with a small suid wrapper,
+that acquires a nice level of -20 and drops privileges. This allows
+beast to let the synthesis threads run with increased scheduling priorities
+which greatly reduces the possibility for drop-outs.
+Under one of the recent 2.6 Linux kernels, this also allows very low latency
+setups with delays around only 2 milli seconds.
+Also among the newly added features is a highly experimental prototype
+of a pattern editor. While this widget isn't fully functional yet, it already
+offers some interesting editing functions. Other features, updated
+languages and more bug fixes are listed in the
+@uref{beast-doc://release-news,,NEWS section}.
+
+
+@newsTitle{Wednesday 18 Feb 2004, Website updates}
+
+BEAST v0.6.0 supports skins for the
+@uref{http://beast.gtk.org/screenshots/image-zoom-5.html,,  piano roll and event roll}
+widgets, so we've opened up a
+@uref{http://beast.gtk.org/browse-bse-files.html?d=skins,, place to collect skin packages}.
+The
+@uref{http://beast.gtk.org/wiki.php,, wiki} also had changes on the
+@uref{http://beast.gtk.org/wiki:BeastFeatures,, BeastFeatures} and
+@uref{http://beast.gtk.org/wiki:FeatureRequests,, FeatureRequests} pages
+and the 
+@uref{beast-doc://links-synthesis,, synthesis links section} was updated.
+
+
 @newsTitle{Wednesday 11 Feb 2004, BEAST Release ``Silver Vein''}
 
 BEAST/BSE version 0.6.0 is available from the
