--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jul  8 12:20:40 2004  Tim Janik  <timj@gtk.org>
+
+	* docs/site-links-related.texi: link updates.
+
 Thu Jul  8 00:57:16 2004  Tim Janik  <timj@gtk.org>
 
 	* docs/site-oldnews.texi: 
