--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-09  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2004-07-08  Gustavo Noronha Silva  <kov@debian.org>
 
 	* pt_BR.po: translation update by
