--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,9 @@
+Sat Jul 10 17:19:07 2004  Tim Janik  <timj@gtk.org>
+
+	* bsesong.c (bse_song_forall_items): don't iterate over song busses
+	which are of BseSource types and thusly handled by chaining to the
+	parent class handler.
+
 Mon Jul  5 08:55:53 2004  Tim Janik  <timj@gtk.org>
 
 	* bsesong.[hcp]: added support for song busses.
