--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
 FIXMES:
-- implement (GUI for) locked properties
+- verify that no IO channel buffer memory is being allocated for virtual modules
+- put "audio channels first, then Ctrl channels (amp)" convention into effect-writing-doc (needed for mix1, mix2, mix5.1 object options)
+- Error: "inputchannelalreadyinuse" should popup new error dialog
+- implement (GUI for) locked properties (e.g. lock bw for lp/hp filters)
 - creating 3 SongBusses and openeing a new view shows 6 song busses, saving, reloading shows 12 busses...
 - save loop coordinbates
 - when loading/merging bse files, make sure all orphan parts are in a new muted track and delete part-item-view
