--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,10 @@
+Sat Jul 10 18:27:53 2004  Tim Janik  <timj@gtk.org>
+
+	* icons/summation.xcf:
+	* icons/summation.png:
+	* bsesummation.idl:
+	* bsesummation.cc: new routing effect to summ up multiple signals.
+
 Sat Jul 10 17:19:07 2004  Tim Janik  <timj@gtk.org>
 
 	* bsesong.c (bse_song_forall_items): don't iterate over song busses
